Fix checkstyle violations and clean up imports